--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,8 @@ psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 requests==2.31.0
 SQLAlchemy==2.0.23
+sqlalchemy-searchable==2.0.0
+SQLAlchemy-Utils==0.41.1
 typing-extensions==4.8.0
 urllib3==2.1.0
 werkzeug==3.0.1
